k8s/base/backend-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-b
spec:
  progressDeadlineSeconds: 600

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1

  selector:
    matchLabels:
      app: backend-b
  template:
    metadata:
      labels:
        app: backend-b
    spec:
      containers:
      - name: backend-b
        image: backend-b
        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "750m"
            memory: "512Mi"

        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
