k8s/base/backend-b-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-b
spec:
  type: ClusterIP
  selector:
    app: backend-b
  ports:
  - port: 80
    targetPort: 8080
